--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,34 @@
+html {
+  box-sizing: border-box;
+}
+
+*, *::before, *::after{
+  box-sizing: inherit;
+}
 body {
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Inter,Verdana, Geneva, Tahoma, sans-serif;
+  min-width: 1400px;
+  margin: 0;
+}
+
+.nav-bar li a{
+  color:blue;
+  font-weight: 100;
+  letter-spacing: 2px;
+  text-decoration:saddlebrown;
+  padding: 20px 55px;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  transition: all 0.5s;
 }
 
 .nav-bar {
   display: flex;
-  justify-content: space-around;
-  padding-left: 30px;
-  flex: 1;
+  justify-content:center;
+  flex-shrink: inherit;
+  list-style: none;
+
 }
 
 .main-content {
@@ -26,11 +48,18 @@ body {
 .footer {
   list-style: none;
   display: flex;
-  justify-content: space-between;
   width: 50%;
   padding-left: 1px;
 }
 
 li:hover{
-  font-size: 25px;
+  text-decoration: aqua;
+}
+
+.fab {
+  padding: 10px;
+}
+
+.green {
+  color: green;
 }
