--- a/styles.css
+++ b/styles.css
@@ -1,79 +1,72 @@
-/* html {
-  box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-} */
-
 body {
-  font-family: Inter, Verdana, Geneva, Tahoma, sans-serif;
-  min-width: 100vw;
+  padding:24px;
+  font-family: 'Poppins', sans-serif;
+  /*width: 375px*/;
+  /*height: 718px*/
+  background-color: rgba(255, 255, 255, 1);
+  display: grid;
   margin: 0;
 }
 
-.nav-bar li a {
+.header {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  margin-top: 10px;
+  margin-bottom: 0px;
+}
+
+.logo {
+  font-size: 30px;
+}
+
+.hamb{
+  display: flex;
+  justify-content: flex-end;
+
+}
+
+.hamb img{
+  max-height: 30px;
+}
+
+.welcome-text {
+  line-height: 52px;
+  font-size: 40px;
+  font-weight: bolder;
+  align-items: center;
+}
+.intro  h3{
+  font-size: 40px;
+  line-height: 52px;
+  font-weight:900;
+}
+
+.welcome-section {
+  background-image: url(img/header-shapes\ mobile@2x.png);
+  background-repeat: no-repeat;
+  display: grid;
+}
+
+.social-media{
+  display: flex;
+  align-content: flex-start;
+  padding-left: 0px;
+  list-style: none;
+  padding-top: 1px;
+  margin: 0px;
+  justify-content: space-between;
+  width: 150px;
+}
+
+.social-media img {
+  max-height: 30px;
+}
+
+.connect {
+  padding-top: 0px;
+  padding-bottom: 10px;
+  margin-bottom: 0px;
   color: blue;
-  font-weight: 100;
-  letter-spacing: 2px;
-  text-decoration: saddlebrown;
-  padding: 20px 55px;
-  display: inline-block;
-  width: 100%;
-  text-align: center;
-  transition: all 0.5s;
-}
-
-.nav-bar {
-  display: flex;
-  justify-content: center;
-  flex-shrink: inherit;
-  list-style: none;
-}
-
-.main-content {
-  background-image: url(img/header-illsutration-mobile@2x.png);
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding-left: 27%;
-  padding-right: 3%;
-}
-
-.heading {
-  padding-top: 100px;
-}
-
-.footer {
-  list-style: none;
-  display: flex;
-  width: 50%;
-  padding-left: 1px;
-  justify-content: center;
-}
-
-li:hover {
-  text-decoration: aqua;
-}
-
-.green {
-  color: green;
-}
-
-img {
-  width: 30px;
-  margin: 10px;
-}
-
-.ham {
-  display: flex;
-  justify-content: end;
-}
-
-@media (max-width: 914px) {
-  .nav-bar {
-    display: none;
-  }
+  font-size: 18px;
+  
 }
