--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
 body {
   padding:24px;
   font-family: 'Poppins', sans-serif;
@@ -12,7 +13,7 @@ body {
   display: grid;
   grid-template-columns: 50% 50%;
   margin-top: 10px;
-  margin-bottom: 128px;
+  height:;
 }
 
 .logo {
@@ -45,7 +46,10 @@ body {
 .welcome-section {
   background-image: url(img/header-shapes\ mobile@2x.png);
   background-repeat: no-repeat;
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 70px;
 }
 
 .social-media{
@@ -70,4 +74,9 @@ body {
   color: blue;
   font-size: 18px;
   
+}
+
+.card-text {
+  font-size: 17px;
+  line-height: 24px;
 }
