--- a/styles.css
+++ b/styles.css
@@ -69,8 +69,9 @@ body {
   padding-top: 1px;
   padding-bottom: 10px;
   margin-bottom: 1px;
-  color: blue;
-  font-size: 18px;
+  color:#7F8CFF;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 .card-text {
