--- a/styles.css
+++ b/styles.css
@@ -42,12 +42,12 @@ body {
 }
 
 .welcome-section {
-  background-image: url(img/Header\ bg.png);
-  background-repeat: no-repeat;
+  background-image: url(img/header-shapes\ mobile@2x.png);
+  background-repeat:no-repeat;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 70px;
+  padding-top: 90px;
 }
 
 .social-media{
