--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
 body {
   padding: 24px;
   font-family: 'Poppins', sans-serif;
@@ -15,8 +16,7 @@ body {
 }
 
 .logo {
-  font-size: 18px;
-  
+  font-size: 18px; 
 }
 
 .hamb {
@@ -43,14 +43,14 @@ body {
 
 .welcome-section {
   background-image: url(img/header-shapes\ mobile@2x.png);
-  background-repeat:no-repeat;
+  background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding-top: 90px;
 }
 
-.social-media{
+.social-media {
   display: flex !important;
   align-content: flex-start;
   padding-left: 1px;
@@ -69,7 +69,7 @@ body {
   padding-top: 1px;
   padding-bottom: 10px;
   margin-bottom: 1px;
-  color:#7F8CFF;
+  color: #7f8cff;
   font-size: 16px;
   font-weight: 500;
 }
