--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,6 @@ body {
 }
 
 .btn1:hover {
-  background-color: darkslateblue;
   text-decoration-line: underline;
 }
 
@@ -167,7 +166,16 @@ body {
 }
 
 .btn3 {
-  width: 40vw;
+  width: 140px;
+  height: 48px;
+  padding: 12px 16px;
+  align-items: center;
+  color: rgba(96, 112, 255, 1);
+  font-size: 17px;
+}
+
+.btn3:hover {
+  text-decoration-line: underline;
 }
 
 .about-me {
@@ -219,9 +227,11 @@ body {
 }
 
 .contact {
-  background-image: url(img/Contact\ me.png);
+  background-image: url(img/header-shapes\ mobile@2x.png);
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: #6070ff;
+  transform: matrix(1, 0, 0, 1, 0, 0);
   padding: 24px;
   display: flex;
   flex-direction: column;
@@ -248,7 +258,7 @@ body {
   line-height: 28px;
   align-self: center;
   margin-bottom: 40px;
-  color: whitesmoke;
+  color: rgba(235, 235, 255, 1);
 }
 
 .contact-input {
