--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,18 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
 
 body {
-  padding: 24px;
   font-family: 'Poppins', sans-serif;
   background-color: rgba(255, 255, 255, 1);
   display: flex;
   margin: 0;
   flex-direction: column;
+  background-color: #E5E5E5;
 }
 
 .project-section {
   display: grid;
   grid-template-columns: 1fr;
+  padding-top: 100px;
 }
 
 .header {
@@ -95,10 +96,10 @@ body {
   border-radius: 20px;
 }
 
-.card-image img {
+/* .card-image img {
   padding: 1px;
   width: 355px;
-}
+} */
 
 .card-header {
   font-weight: 700;
@@ -176,6 +177,7 @@ body {
   align-items: center;
   color: rgba(96, 112, 255, 1);
   font-size: 17px;
+  align-self: center;
 }
 
 .btn3:hover {
@@ -242,8 +244,10 @@ body {
 }
 
 .contact-form {
+  width: 439px;
   display: flex;
   flex-direction: column;
+  align-self: center;
 }
 
 .contact-header {
@@ -268,7 +272,7 @@ body {
 .contact-input {
   margin-bottom: 10px;
   padding: 10px;
-  border-radius: 10px;
+  border-radius: 1px;
 }
 
 .lang-arrow {
@@ -290,7 +294,7 @@ body {
 
 @media only screen and (min-width: 970px) {
   .first-page {
-   
+    background: #FFFFFF;
     border: 2px solid whitesmoke;
     border-radius: 1px 1px 0px 50px; 
   }
@@ -338,17 +342,21 @@ body {
   }
 
   .card-section {
+    justify-self: center;
+    background-color: #FFFFFF;
     display: flex;
     flex-direction: row;
-    border:  1px solid #dfe1e6;
-    margin: 142px;
+    border: 1px solid #dfe1e6;
+    max-width: 92%;
     
+  }
+  .about-section{
+    background-color: #FFFFFF;
   }
 
   .section-content {
-    border: 1px solid gray;
-    margin: 1px;
-    padding: 1px;
+    margin: 66px;
+    padding: 0px;
     display: flex;
     flex-direction: column;
   }
@@ -361,17 +369,21 @@ body {
     border-radius: 8px;
   }
 
- .bt6 {
-   width: 100px;
-   height: 30px;
-   color: rgba(57, 109, 242, 1);
-   line-height: 24px;
-   border: 1px solid blue;
-   border-radius: 7px;
-   background-color: white;
-   margin-left: 18px;
- }
- 
+  .bt6 {
+    width: 124px;
+    height: 48px;
+    color: rgba(57, 109, 242, 1);
+    line-height: 24px;
+    border: 1px solid blue;
+    border-radius: 7px;
+    background-color: white;
+    margin-left: 18px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 24px;
+}
  .btn1 {
    display: none;
  }
@@ -380,19 +392,22 @@ body {
  }
 
  .about-me {
-   display: grid;
-   grid-template-columns: 1fr 1fr;
+   display: flex;
+flex-direction: row;
    
  }
 
  .about1 {
    
-   display: grid;
-   grid-template-columns: 1fr 1fr;
- }
+   display: flex;
+   flex-direction: column;
+   max-width: 554px;
+   padding-left: 80px;
+  }
 
  .tools {
    flex: 1;
+   padding-right: 80px;
  }
 }
     
