--- a/styles.css
+++ b/styles.css
@@ -393,12 +393,11 @@ body {
 
  .about-me {
    display: flex;
-flex-direction: row;
+  flex-direction: row;
    
  }
 
- .about1 {
-   
+ .about1 { 
    display: flex;
    flex-direction: column;
    max-width: 554px;
@@ -408,6 +407,19 @@ flex-direction: row;
  .tools {
    flex: 1;
    padding-right: 80px;
+ }
+ .langua {
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr ;
+  
+ }
+
+ .hide {
+   display: none;
+ }
+
+ .contact {
+   margin-top: 190px;
  }
 }
     
