--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,10 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: rgba(255, 255, 255, 1);
   display: flex;
   margin: 0;
   flex-direction: column;
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
 }
 
 .project-section {
@@ -291,12 +290,11 @@ body {
   margin-left: 1px;
 }
 
-
 @media only screen and (min-width: 970px) {
   .first-page {
-    background: #FFFFFF;
+    background: #ffffff;
     border: 2px solid whitesmoke;
-    border-radius: 1px 1px 0px 50px; 
+    border-radius: 1px 1px 1px 50px; 
   }
 
   .header {
@@ -306,7 +304,7 @@ body {
 
   .link-items {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-columns: 1fr 1fr 1fr;
     list-style: none;
   }
 
@@ -323,7 +321,7 @@ body {
   }
   
   .hamburger {
-    display: none
+    display: none;
   }
 
   .welcome-section {
@@ -343,26 +341,29 @@ body {
 
   .card-section {
     justify-self: center;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     display: flex;
     flex-direction: row;
     border: 1px solid #dfe1e6;
     max-width: 92%;
     
   }
-  .about-section{
-    background-color: #FFFFFF;
+
+  .about-section {
+    background-color: #ffffff;
   }
 
   .section-content {
     margin: 66px;
-    padding: 0px;
+    padding: 1px;
     display: flex;
     flex-direction: column;
   }
+
   .card-image {
     margin-right: 20px;
   }
+
   .img-card {
     height: 448px;
     width: 544px;
@@ -378,24 +379,24 @@ body {
     border-radius: 7px;
     background-color: white;
     margin-left: 18px;
-    font-family: Poppins;
     font-style: normal;
     font-weight: 500;
     font-size: 17px;
     line-height: 24px;
-}
+  }
+
  .btn1 {
    display: none;
- }
+  }
+
  .rev {
-   order: 1;
- }
+    order: 1;
+  }
 
  .about-me {
-   display: flex;
-  flex-direction: row;
-   
- }
+    display: flex;
+    flex-direction: row;
+  }
 
  .about1 { 
    display: flex;
@@ -408,10 +409,10 @@ body {
    flex: 1;
    padding-right: 80px;
  }
+
  .langua {
    display: grid;
-   grid-template-columns: 1fr 1fr 1fr ;
-  
+   grid-template-columns: 1fr 1fr 1fr;
  }
 
  .hide {
@@ -421,5 +422,5 @@ body {
  .contact {
    margin-top: 190px;
  }
+
 }
-    
