--- a/styles.css
+++ b/styles.css
@@ -292,9 +292,10 @@ body {
 
 @media only screen and (min-width: 970px) {
   .first-page {
-    background: #ffffff;
+    background: #fff;
     border: 2px solid whitesmoke;
-    border-radius: 1px 1px 1px 50px; 
+    border-radius: 1px 1px 1px 50px;
+
   }
 
   .header {
@@ -341,16 +342,15 @@ body {
 
   .card-section {
     justify-self: center;
-    background-color: #ffffff;
+    background-color: #fff;
     display: flex;
     flex-direction: row;
     border: 1px solid #dfe1e6;
-    max-width: 92%;
-    
+    max-width: 92%;  
   }
 
   .about-section {
-    background-color: #ffffff;
+    background-color: #fff;
   }
 
   .section-content {
@@ -382,45 +382,43 @@ body {
     font-style: normal;
     font-weight: 500;
     font-size: 17px;
-    line-height: 24px;
   }
 
- .btn1 {
-   display: none;
+  .btn1 {
+    display: none;
   }
 
- .rev {
+  .rev {
     order: 1;
   }
 
- .about-me {
+  .about-me {
     display: flex;
     flex-direction: row;
   }
 
- .about1 { 
-   display: flex;
-   flex-direction: column;
-   max-width: 554px;
-   padding-left: 80px;
+  .about1 { 
+    display: flex;
+    flex-direction: column;
+    max-width: 554px;
+    padding-left: 80px;
   }
 
- .tools {
-   flex: 1;
-   padding-right: 80px;
- }
+  .tools {
+    flex: 1;
+    padding-right: 80px;
+  }
 
- .langua {
-   display: grid;
-   grid-template-columns: 1fr 1fr 1fr;
- }
+  .langua {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 
- .hide {
-   display: none;
- }
+  .hide {
+    display: none;
+  }
 
- .contact {
-   margin-top: 190px;
- }
-
+  .contact {
+    margin-top: 190px;
+  }
 }
