--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 body {
   padding: 24px;
   font-family: 'Poppins', sans-serif;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: #e5e5e5;
   display: flex;
   margin: 0;
   flex-direction: column;
@@ -87,7 +87,6 @@ body {
   flex-direction: column;
   padding: 16px;
   margin-bottom: 90px;
-  border: 1px solid rgba(223, 225, 230, 1);
   border-radius: 20px;
 }
 
@@ -123,14 +122,15 @@ body {
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
+  max-width: 80vw;
 }
 
 .card-lang {
   padding: 1px;
   justify-content: space-between;
-  width: 45vw;
-  margin-top: 16px;
-  margin-bottom: 30px;
+  max-width: 100vw;
+  margin-top: 10px;
+  margin-bottom: 77px;
 }
 
 .card-lang li {
@@ -153,6 +153,7 @@ body {
   background-color: white;
   font-size: 17px;
   border: 1px solid;
+  
 }
 
 .btn1:hover {
@@ -264,7 +265,6 @@ body {
 .contact-input {
   margin-bottom: 10px;
   padding: 10px;
-  border-radius: 10px;
 }
 
 .lang-arrow {
@@ -281,4 +281,179 @@ body {
   list-style: none;
   padding-left: 1px;
   margin-left: 1px;
+}
+
+@media only screen and (min-width: 760px) {
+
+  body {
+    padding: 0px;
+    margin: 0px;
+  }
+  .first-page {
+    background: #fff;
+    border: 2px solid whitesmoke;
+    border-radius: 1px 1px 1px 50px;
+    width: 1440px;
+  }
+
+  .header {
+    display: flex;
+  }
+
+  .link-items {
+    display: flex;
+    list-style: none;
+    width: 259px;
+    height: 40px;
+    margin-right: 140px ;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .link-items li {
+    padding-left: 32px;
+  }
+  
+  .logo {
+    padding-left: 155px;
+    color: rgba(96, 112, 255, 1);
+    width: 76px;
+    height: 20px;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 20px;
+  }
+  
+  .welcome-section {
+    background-image: url(img/Header\ bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  .intro {
+    margin-top: 100px;
+    padding-left: 260px;
+    padding-right: 260px;
+  }
+
+  .soshari {
+    padding-left: 260px;
+  }
+
+  .card-section {
+    display: grid;
+    grid-template-columns: minmax(0,1fr) minmax(0, 1fr); 
+    grid-gap: 1px;
+    margin: 142px;
+    width: 1156px;
+    height: 496px;
+    justify-content: space-between;
+    background-color: white;
+  }
+  .card-para {
+    margin-left: 10px;
+    padding: 18px;
+  }
+
+  .card-image {
+    margin: 10px;
+  }
+
+  .card-image img {
+    width: 544px;
+    height: 488px;
+  }
+
+  .img-card {
+    width: 544px;
+    height: 488px;
+    
+  }
+  .btn1 {
+    width: 120px;
+  }
+
+  .se {
+    order: 1;
+  }
+
+  .about-me {
+    display: grid;
+    grid-template-columns: minmax(0,1fr) minmax(0,1fr);
+    background-color: white;
+    border-radius: 0 60px 0 0;
+    width: 1440px;
+    max-height: 916px;
+  }
+
+  .btnp {
+    width: 160px;
+    
+  }
+  .about-first {
+    margin-left: 142px;
+    padding-right: 10px;
+  }
+
+  .la {
+    position: relative;
+    left: 418px;
+    margin-top: 15px;
+  }
+  .zi {
+    left: 490px;
+  }
+
+  .langua {
+    width: 60vw;
+    display: grid;
+    grid-template-columns: minmax(0,1fr)1fr 1fr 1fr;
+    margin: 0px;
+  }
+  .lang-item {
+    display: flex;
+    flex-direction: column;
+    width: 122px;
+    height: 120px;
+    padding: 10px;
+  }
+  .contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 1440px;
+    border-radius: 90px 0px 0px 0px;
+    height: 846px;
+  }
+  .contact-header {
+    flex: 1;
+    padding-left: 400px;
+    padding-right: 400px;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 52px;
+    justify-content: center;
+  }
+
+  .contact-text {
+    padding-right: 400px;
+    padding-left: 400px;
+
+  }
+
+  .contact-form {
+    justify-content: center;
+    padding-left: 400px;
+    padding-right: 400px;
+  }
+  .rty{
+    margin-left: 170px;
+  }
+
+  .contact-input {
+    margin-bottom: 17px;
+  }
+
 }
