--- a/styles.css
+++ b/styles.css
@@ -272,7 +272,7 @@ body {
     margin: 1px;
     overflow-x: hidden;
   }
-  
+
   .first-page {
     background: #fff;
     border: 2px solid whitesmoke;
@@ -294,12 +294,12 @@ body {
 
   .hamburger {
     display: none;
-   }
+  }
 
   .link-items li {
     padding-left: 32px;
   }
-  
+
   .logo {
     padding-left: 155px;
     color: rgba(96, 112, 255, 1);
@@ -309,26 +309,26 @@ body {
     font-size: 18px;
     line-height: 20px;
   }
-  
+
   .welcome-section {
     background-image: url(img/Header\ bg.png);
     background-size: cover;
     background-repeat: no-repeat;
   }
-  
+
   .intro {
     margin-top: 100px;
     padding-left: 260px;
     padding-right: 260px;
   }
-  
+
   .soshari {
     padding-left: 260px;
   }
-  
+
   .card-section {
     display: grid;
-    grid-template-columns: minmax(0,1fr) minmax(0, 1fr); 
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
     grid-gap: 1px;
     margin: 142px;
     width: 1156px;
@@ -336,68 +336,68 @@ body {
     justify-content: space-between;
     background-color: white;
   }
-  
+
   .card-para {
     margin-left: 10px;
     padding: 18px;
   }
-  
+
   .card-image {
     margin: 10px;
   }
-  
+
   .card-image img {
     width: 544px;
     height: 488px;
   }
-  
+
   .img-card {
     width: 544px;
-    height: 488px;  
+    height: 488px;
   }
   
   .btn1 {
     width: 120px;
   }
-  
+
   .se {
     order: 1;
   }
-  
+ 
   .about-me {
     display: grid;
-    grid-template-columns: minmax(0,1fr) minmax(0,1fr);
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
     background-color: white;
     border-radius: 0 60px 0 0;
     width: 1440px;
     max-height: 916px;
   }
-  
+
   .btnp {
-    width: 160px;  
+    width: 160px;
   }
-  
+
   .about-first {
     margin-left: 142px;
     padding-right: 10px;
   }
-  
+ 
   .la {
     position: relative;
     left: 418px;
     margin-top: 15px;
   }
-  
+ 
   .zi {
     left: 490px;
   }
-  
+ 
   .langua {
     display: grid;
-    grid-template-columns: minmax(0,130px) minmax(0, 130px) 1fr;
-    margin: 0px;
+    grid-template-columns: minmax(0, 130px) minmax(0, 130px) 1fr;
+    margin: 1px;
   }
-  
+
   .lang-item {
     display: flex;
     flex-direction: column;
@@ -405,19 +405,18 @@ body {
     height: 70px;
     padding-bottom: 40px;
     padding-right: 40px;
-    margin: 10px;
-    
+    margin: 10px;   
   }
-  
+
   .contact {
     display: flex;
     flex-direction: column;
     justify-content: center;
     max-width: 1440px;
-    border-radius: 90px 0px 0px 0px;
+    border-radius: 90px 1px 1px 1px;
     height: 846px;
   }
-  
+
   .contact-header {
     flex: 1;
     padding-left: 623px;
@@ -427,22 +426,22 @@ body {
     line-height: 52px;
     justify-content: center;
   }
-  
+
   .contact-text {
     padding-right: 253px;
     padding-left: 400px;
   }
-  
+
   .contact-form {
     justify-content: center;
     padding-left: 400px;
     padding-right: 400px;
   }
-  
-  .rty{
+
+  .rty {
     margin-left: 235px;
   }
-  
+
   .contact-input {
     margin-bottom: 17px;
     width: 447px;
@@ -453,7 +452,7 @@ body {
   .ipin {
     width: 50px;
   }
-
+  
   .btn3 {
     width: 9vw;
   }
