Add menu toggle to mobile menu
Add html elements for mobile menu
Add style to our mobile menu elements
Add js file for hamburger menu toggle

--- a/styles.css
+++ b/styles.css
@@ -265,8 +265,67 @@ body {
   padding-left: 1px;
   margin-left: 1px;
 }
+.ham {
+  position: fixed;
+  z-index: 100;
+  top: 1rem;
+  right: 1rem;
+  width: 3rem;
+  height: 3rem;
+  border: black solid 1px;
+  background: white;
+  cursor: pointer;
+}
+
+.menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
+  background: black;
+  color: white;
+  transform: translateY(-100%);
+  transition: transform 0.2s;
+  list-style: none;
+  padding-top: 4rem;
+  display: block;
+  opacity: 1;
+}
+
+.showMenu {
+  transform: translateY(0);
+}
+
+.menuLink {
+  display: inline;
+  font-size: 2rem;
+  color: white;
+  text-decoration: none;
+}
+.xIcon,
+  .menuIcon{
+    display: block;
+  }
+
+  .ham{
+    display: block;
+  }
+
 
 @media only screen and (min-width: 1000px) {
+  .menu{
+    display: none;
+  }
+  .ham{
+    display: none;
+  }
+  .xIcon,
+  .menuIcon{
+    display: none;
+  }
   body {
     padding: 1px;
     margin: 1px;
