--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
+@media only screen and (max-width: 992px) { 
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
 
 body {
   padding: 24px;
   font-family: 'Poppins', sans-serif;
-  background-color: #e5e5e5;
+  background-color: #fff;
   display: flex;
   margin: 0;
   flex-direction: column;
@@ -30,7 +31,6 @@ body {
   justify-content: flex-end;
   flex: 1;
 }
-
 
 .hamb img {
   max-height: 30px;
@@ -273,28 +273,35 @@ body {
   width: 3rem;
   height: 3rem;
   border: black solid 1px;
-  background: white;
+  background: #fff;
   cursor: pointer;
 }
 
 .menu {
   position: fixed;
   top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   left: 0;
   right: 0;
   bottom: 0;
   width: 100%;
-  height: 100vh;
-  background: black;
+  height: 50px;
+  background: #E5E5E5;
   color: white;
   transform: translateY(-100%);
   transition: transform 0.2s;
   list-style: none;
   padding-top: 4rem;
   display: block;
-  opacity: 1;
+  opacity: 0.96;
 }
 
+.welcome-page {
+  opacity: 0.96;
+  z-index: 1;
+}
 .showMenu {
   transform: translateY(0);
 }
@@ -308,12 +315,19 @@ body {
 .xIcon,
   .menuIcon{
     display: block;
+    background-color: #fff;
   }
 
   .ham{
     display: block;
+    background-color: #E5E5E5;
+    border:none;
   }
 
+  .ham button {
+    background-color: #fff;
+  }
+}
 
 @media only screen and (min-width: 1000px) {
   .menu{
